# euler.hs

./: 1.hs  LICENSE  README.md  euler-hs.cabal
solutions/: 002.hs  003.hs  004.hs  005.hs  010.hs  011.hs  012.hs  013.hs  014.hs  015.hs  016.hs  017.hs  1.hs  6.hs  7.hs  8.hs  9.hs
